RESOLVED FIXED104424
JSC::CodeBlock::getJITType() missing const qualifier when JIT disabled
https://bugs.webkit.org/show_bug.cgi?id=104424
Summary JSC::CodeBlock::getJITType() missing const qualifier when JIT disabled
Jonathan Liu
Reported 2012-12-07 18:26:06 PST
If JIT is enabled, JSC::CodeBlock::getJITType() has the const qualifier. If JIT is disabled, JSC::CodeBlock::getJITType() does not have the const qualifier. JSC::CodeBlock::getJITType() should have the const qualifier in both cases.
Attachments
Patch (1.33 KB, patch)
2012-12-07 18:31 PST, Jonathan Liu
no flags
Jonathan Liu
Comment 1 2012-12-07 18:31:41 PST
Laszlo Gombos
Comment 2 2012-12-07 18:48:14 PST
Comment on attachment 178320 [details] Patch lgtm.
WebKit Review Bot
Comment 3 2012-12-07 19:55:51 PST
Comment on attachment 178320 [details] Patch Clearing flags on attachment: 178320 Committed r137010: <http://trac.webkit.org/changeset/137010>
WebKit Review Bot
Comment 4 2012-12-07 19:55:54 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.